--- a/reports/mono-2.0/HPLT-v2-cjk_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-cjk_Latn.yaml
@@ -148,7 +148,7 @@ timestamp: 1733260863.513544
 unique_sents: 26104
 warnings:
 - src_warning_tok_nltk_wordpunct
-- src_fasttext
+- src_fastspell
 src_ngrams: '{"1": [[["yehova"], 9174], [["yesu"], 6984], [["nawa"], 6930], [["kaha"],
   6844], [["mu"], 6281]], "2": [[["vyuma muka"], 1124], [["mwomwo ika"], 913], [["kaha
   nawa"], 810], [["mulong wa"], 647], [["yiff yiff"], 597]], "3": [[["yiff yiff yiff"],
