--- a/reports/mono-2.0/HPLT-v2-crh_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-crh_Latn.yaml
@@ -417,7 +417,7 @@ timestamp: 1732722468.655625
 unique_sents: 774648
 warnings:
 - src_warning_tok_nltk_wordpunct
-- src_fasttext
+- src_fastspell
 src_ngrams: '{"1": [[["q\u0131r\u0131m"], 157006], [["rusiye"], 147118], [["dep"],
   144398], [["h\u00e4m"], 121927], [["edi"], 111291]], "2": [[["q\u0131r\u0131mtatar
   milliy"], 21231], [["hizb ut"], 18252], [["i\u015f\u011fal etilgen"], 17655], [["ekrem
