--- a/reports/mono-2.0/HPLT-v2-dzo_Tibt.yaml
+++ b/reports/mono-2.0/HPLT-v2-dzo_Tibt.yaml
@@ -267,7 +267,7 @@ timestamp: 1732707582.899714
 unique_sents: 18450
 warnings:
 - src_warning_tok_nltk_wordpunct
-- src_fasttext
+- src_fastspell
 src_ngrams: '{"1": [[["\u0f42"], 175207], [["\u0f53"], 167394], [["\u0f51"], 143180],
   [["\u0f62"], 128471], [["\u0f44"], 78947]], "2": [[["no comments"], 4349], [["pm
   no"], 3731], [["am no"], 618], [["read more"], 192], [["in the"], 153]], "3": [[["pm
