--- a/reports/mono-2.0/HPLT-v2-ewe_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-ewe_Latn.yaml
@@ -335,7 +335,7 @@ timestamp: 1732706611.968582
 unique_sents: 62285
 warnings:
 - src_warning_tok_nltk_wordpunct
-- src_fasttext
+- src_fastspell
 src_ngrams: '{"1": [[["efe"], 20710], [["yehowa"], 16739], [["biblia"], 10777], [["wofe"],
   9147], [["a\u0256eke"], 7097]], "2": [[["yehowa \u00f0asefowo"], 1665], [["gb\u0254gb\u0254
   k\u0254k\u0254e"], 1390], [["sue sue"], 1314], [["efe nusr\u0254"], 1291], [["nenema
