--- a/reports/mono-2.0/HPLT-v2-hne_Deva.yaml
+++ b/reports/mono-2.0/HPLT-v2-hne_Deva.yaml
@@ -214,7 +214,7 @@ srclang: hne
 timestamp: 1732705541.340157
 unique_sents: 40771
 warnings:
-- src_fasttext
+- src_fastspell
 src_ngrams: '{"1": [[["\u092e\u0928"], 33111], [["\u0939"], 32170], [["\u0932\u0947"],
   30393], [["\u0939\u0947"], 29654], [["\u0905\u0909"], 20944]], "2": [[["\u0926\u0947\u0916\u0947
   \u0917\u090f"], 6158], [["\u092c\u093e\u0930 \u0926\u0947\u0916\u0947"], 6154],
