--- a/reports/mono-2.0/HPLT-v2-kas_Arab.yaml
+++ b/reports/mono-2.0/HPLT-v2-kas_Arab.yaml
@@ -141,7 +141,7 @@ srclang: ks
 timestamp: 1733223638.079764
 unique_sents: 11770
 warnings:
-- src_fasttext
+- src_fastspell
 src_ngrams: '{"1": [[["\u062a\u06c1"], 14742], [["\u0686\u06be\u06c1"], 14677], [["\u0645\u0646\u0632"],
   12340], [["\u06cc\u06c1"], 7439], [["\u0646\u06c1"], 7036]], "2": [[["\u0628\u0646\u0631
   \u0641\u0644\u06a9\u0633"], 5864], [["\u0641\u0644\u06a9\u0633 \u0628\u0646\u0631"],
