--- a/reports/mono-2.0/HPLT-v2-kmr_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-kmr_Latn.yaml
@@ -559,7 +559,7 @@ timestamp: 1727196886.9086394
 unique_sents: 4165409
 warnings:
 - src_warning_tok_nltk_wordpunct
-- src_fasttext
+- src_fastspell
 src_ngrams: '{"1": [[["kurd"], 573759], [["kirin"], 563589], [["dike"], 508695], [["bikin"],
   483100], [["kurdistan\u00ea"], 482595]], "2": [[["\u00ee \u00ee"], 94449], [["her\u00eama
   kurdistan\u00ea"], 77450], [["dewleta tirk"], 74919], [["ziman\u00ea kurd\u00ee"],
