--- a/reports/mono-2.0/HPLT-v2-mag_Deva.yaml
+++ b/reports/mono-2.0/HPLT-v2-mag_Deva.yaml
@@ -190,7 +190,7 @@ srclang: mag
 timestamp: 1733428418.4925988
 unique_sents: 10798
 warnings:
-- src_fasttext
+- src_fastspell
 src_ngrams: '{"1": [[["\u0906\u0909"], 23504], [["\u092e\u0947\u0902"], 19572], [["\u0939\u0907"],
   15822], [["\u090a"], 11847], [["\u0928\u092f\u0901"], 11445]], "2": [[["\u0930\u0939\u0932\u0947
   \u0939\u0932"], 2185], [["\u091c\u093e \u0939\u0907"], 1461], [["\u0915\u093f \u090a"],
