--- a/reports/mono-2.0/HPLT-v2-npi_Deva.yaml
+++ b/reports/mono-2.0/HPLT-v2-npi_Deva.yaml
@@ -761,7 +761,7 @@ srclang: npi
 timestamp: 1727264269.751374
 unique_sents: 22365347
 warnings:
-- src_fasttext
+- src_fastspell
 src_ngrams: '{"1": [[["\u0928\u0947\u092a\u093e\u0932"], 2495926], [["\u0928\u0947\u092a\u093e\u0932\u0940"],
   2231383], [["\u0917\u0930\u093f\u090f\u0915\u094b"], 2186314], [["\u0915\u093e\u092e"],
   2120619], [["\u092d\u090f\u0915\u093e"], 1710736]], "2": [[["\u091c\u093e\u0928\u0915\u093e\u0930\u0940
