--- a/reports/mono-2.0/HPLT-v2-nso_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-nso_Latn.yaml
@@ -276,7 +276,7 @@ timestamp: 1733260414.9601638
 unique_sents: 85222
 warnings:
 - src_warning_tok_nltk_wordpunct
-- src_fasttext
+- src_fastspell
 src_ngrams: '{"1": [[["ya"], 124023], [["re"], 69684], [["wa"], 64276], [["t\u0161a"],
   55880], [["ge"], 55289]], "2": [[["baka la"], 7434], [["yo mongwe"], 6799], [["wa
   gagwe"], 5292], [["t\u0161e dingwe"], 5088], [["ya gagwe"], 4606]], "3": [[["dihlatse
