--- a/reports/mono-2.0/HPLT-v2-ory_Orya.yaml
+++ b/reports/mono-2.0/HPLT-v2-ory_Orya.yaml
@@ -463,7 +463,7 @@ srclang: ory
 timestamp: 1727029566.8808634
 unique_sents: 2426565
 warnings:
-- src_fasttext
+- src_fastspell
 src_ngrams: '{"1": [[["\u0b38\u0b47"], 659801], [["\u0b0f\u0b15"], 600284], [["\u0b15\u0b30\u0b3f\u0b2c\u0b3e"],
   421415], [["\u0b2c\u0b4b\u0b32\u0b3f"], 371775], [["\u0b2f\u0b47"], 312114]], "2":
   [[["\u0b15\u0b39\u0b3f\u0b1b\u0b28\u0b4d\u0b24\u0b3f \u0b2f\u0b47"], 53427], [["\u0b30\u0b3e\u0b1c\u0b4d\u0b5f
