--- a/reports/mono-2.0/HPLT-v2-quy_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-quy_Latn.yaml
@@ -624,7 +624,7 @@ timestamp: 1733729075.27812
 unique_sents: 213654
 warnings:
 - src_warning_tok_nltk_wordpunct
-- src_fasttext
+- src_fastspell
 src_ngrams: '{"1": [[["pi"], 111878], [["llamk"], 92886], [["apuy"], 90929], [["kin"],
   88290], [["ra"], 77059]], "2": [[["pukyuta llamk"], 43849], [["mi manchi"], 12481],
   [["pikachu pikachu"], 11594], [["kin he"], 11424], [["pi pi"], 11381]], "3": [[["pikachu
