--- a/reports/mono-2.0/HPLT-v2-run_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-run_Latn.yaml
@@ -378,7 +378,7 @@ timestamp: 1726860133.8232777
 unique_sents: 1093620
 warnings:
 - src_warning_tok_nltk_wordpunct
-- src_fasttext
+- src_fastspell
 src_ngrams: '{"1": [[["n"], 882735], [["y"], 552799], [["w"], 375977], [["rwanda"],
   214931], [["kandi"], 180657]], "2": [[["u rwanda"], 108819], [["umukuru w"], 44525],
   [["nyuma y"], 40371], [["rayon sports"], 36415], [["hamwe n"], 28686]], "3": [[["leta
