--- a/reports/mono-2.0/HPLT-v2-ssw_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-ssw_Latn.yaml
@@ -163,7 +163,7 @@ timestamp: 1727015299.4147587
 unique_sents: 39431
 warnings:
 - src_warning_tok_nltk_wordpunct
-- src_fasttext
+- src_fastspell
 src_ngrams: '{"1": [[["stfu"], 8185], [["noobs"], 8185], [["bantfu"], 3879], [["nkulunkulu"],
   3525], [["ke"], 2986]], "2": [[["stfu noobs"], 8185], [["edit source"], 1029], [["wonkhe
   umuntfu"], 520], [["bonkhe bantfu"], 445], [["uma ngabe"], 433]], "3": [[["emazinga
