--- a/reports/mono-2.0/HPLT-v2-tso_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-tso_Latn.yaml
@@ -443,7 +443,7 @@ timestamp: 1726768396.8569524
 unique_sents: 136723
 warnings:
 - src_warning_tok_nltk_wordpunct
-- src_fasttext
+- src_fastspell
 src_ngrams: '{"1": [[["ni"], 165530], [["vha"], 63263], [["ha"], 59393], [["wana"],
   52896], [["n"], 46262]], "2": [[["ndlela leyi"], 10450], [["ha yona"], 8602], [["ha
   yini"], 6061], [["wana ni"], 5889], [["vanhu lava"], 5636]], "3": [[["timbhoni ta
