--- a/reports/mono-2.0/HPLT-v2-tum_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-tum_Latn.yaml
@@ -261,7 +261,7 @@ timestamp: 1732722927.7766306
 unique_sents: 65730
 warnings:
 - src_warning_tok_nltk_wordpunct
-- src_fasttext
+- src_fastspell
 src_ngrams: '{"1": [[["yehova"], 27729], [["\u0175anthu"], 24888], [["chiuta"], 23684],
   [["ndi"], 21388], [["yesu"], 20680]], "2": [[["\u0175a yehova"], 2263], [["charu
   chapasi"], 1962], [["\u0175akaboni \u0175a"], 1822], [["nga umo"], 1620], [["\u0175anthu
