--- a/reports/mono-2.0/HPLT-v2-xho_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-xho_Latn.yaml
@@ -403,7 +403,7 @@ timestamp: 1734110972.6016927
 unique_sents: 1056230
 warnings:
 - src_warning_tok_nltk_wordpunct
-- src_fasttext
+- src_fastspell
 src_ngrams: '{"1": [[["i"], 320796], [["uyehova"], 47227], [["e"], 39367], [["of"],
   36583], [["nge"], 33611]], "2": [[["ialam yomsi"], 10916], [["igumbi lokulala"],
   9094], [["iindwendwe eziyi"], 8747], [["izilwanyana zasekhaya"], 8330], [["bonisa
