--- a/reports/mono-2.0/HPLT-v2-ydd_Hebr.yaml
+++ b/reports/mono-2.0/HPLT-v2-ydd_Hebr.yaml
@@ -400,7 +400,7 @@ srclang: ydd
 timestamp: 1733429304.5770075
 unique_sents: 1420745
 warnings:
-- src_fasttext
+- src_fastspell
 src_ngrams: '{"1": [[["\u05e4\u05d5\u05df"], 1847266], [["\u05d0\u05d9\u05d6"], 1600808],
   [["\u05e6\u05d5"], 1355274], [["\u05d4\u05d0\u05d8"], 853755], [["\u05e0\u05d9\u05e9\u05d8"],
   680390]], "2": [[["\u05e2\u05e1 \u05d0\u05d9\u05d6"], 206425], [["\u05d0\u05d9\u05d6
