--- a/reports/mono-2.0/HPLT-v2-ace_Arab.yaml
+++ b/reports/mono-2.0/HPLT-v2-ace_Arab.yaml
@@ -42,7 +42,7 @@ timestamp: 1733223033.566601
 unique_sents: 93
 warnings:
 - src_warning_tok_nltk_wordpunct
-- src_fasttext
+- src_fastspell
 src_ngrams: '{"1": [[["\u0643\u0646"], 1683], [["\u0645\u062f\u0648\u0646"], 1680],
   [["\u0643\u062c\u0627\u0633"], 1530], [["\u062e\u0648\u0646\u062a\u0648\u0646"],
   1530], [["\u0627\u0648\u0643"], 756]], "2": [[["\u0645\u062f\u0648\u0646 \u0643\u0646"],
