--- a/reports/mono-2.0/HPLT-v2-gaz_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-gaz_Latn.yaml
@@ -487,7 +487,7 @@ timestamp: 1734358811.3173099
 unique_sents: 525017
 warnings:
 - src_warning_tok_nltk_wordpunct
-- src_fasttext
+- src_fastspell
 src_ngrams: '{"1": [[["ta"], 266637], [["oromoo"], 206247], [["irratti"], 136717],
   [["keessatti"], 135879], [["irraa"], 134479]], "2": [[["of the"], 17118], [["bilisummaa
   oromoo"], 16589], [["adda addaa"], 14969], [["ummata oromoo"], 13337], [["ilmaan
