--- a/reports/mono-2.0/HPLT-v2-pbt_Arab.yaml
+++ b/reports/mono-2.0/HPLT-v2-pbt_Arab.yaml
@@ -684,7 +684,7 @@ timestamp: 1726828772.0442975
 unique_sents: 5506825
 warnings:
 - src_warning_tok_nltk_wordpunct
-- src_fasttext
+- src_fastspell
 src_ngrams: '{"1": [[["\u0686\u06d0"], 5754718], [["\u06a9\u06d0"], 5332453], [["\u062f\u064a"],
   1706720], [["\u062f\u06d0"], 1624373], [["\u06cc\u06d0"], 1341005]], "2": [[["\u0627\u0641\u063a\u0627\u0646\u0633\u062a\u0627\u0646
   \u06a9\u06d0"], 193226], [["\u062f\u064a \u0686\u06d0"], 188791], [["\u0628\u0631\u062e\u0647
