--- a/reports/mono-2.0/HPLT-v2-prs_Arab.yaml
+++ b/reports/mono-2.0/HPLT-v2-prs_Arab.yaml
@@ -1104,7 +1104,7 @@ timestamp: 1726893768.532708
 unique_sents: 33567402
 warnings:
 - src_warning_tok_nltk_wordpunct
-- src_fasttext
+- src_fastspell
 src_ngrams: '{"1": [[["\u0645\u06cc"], 18632599], [["\u0633\u0646\u06af"], 5948337],
   [["\u0645\u06cc\u0634\u0648\u062f"], 5332831], [["\u062a\u0648\u0644\u06cc\u062f"],
   5068136], [["\u0633\u06cc\u0633\u062a\u0645"], 4353800]], "2": [[["\u0633\u0646\u06af
